<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/view_instruction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/title_view_instruction"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/view_instruction_content_area"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:id="@+id/view_instruction_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/view_instruction_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="left"
                android:text="@string/summary_view_instruction"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/view_instruction_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="left"
                android:text="@string/description_view_instruction"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ScrollView
                android:id="@+id/view_instruction_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/view_instruction_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="30dip"
                    android:paddingRight="30dip"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </ScrollView>

            <CheckBox
                android:id="@+id/view_instruction_send_sms_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:text="@string/checkbox_send_sms" />

            <View
                android:id="@+id/view_instruction_separating_bar"
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:background="#444444" />

            <Button
                android:id="@+id/view_instruction_confirm_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/button_finish" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>