<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setup_send_manual_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/title_setup_send_manual"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/setup_send_manual_content_area"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:id="@+id/setup_send_manual_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/setup_send_manual_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="0"
                android:gravity="left"
                android:text="@string/summary_setup_send_manual"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/setup_send_manual_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:gravity="left"
                android:text="@string/description_setup_send_manual"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ScrollView
                android:id="@+id/setup_send_manual_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/setup_send_manual_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="30dip"
                    android:paddingRight="30dip"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </ScrollView>

            <CheckBox
                android:id="@+id/setup_send_manual_send_sms_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_weight="0"
                android:text="@string/checkbox_send_sms" />

            <View
                android:id="@+id/setup_send_manual_separating_bar"
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="0"
                android:background="#444444" />

            <Button
                android:id="@+id/setup_send_manual_next_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/button_finish" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>