<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/control_panel_content_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <ScrollView
        android:id="@+id/control_panel_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/control_panel_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/control_panel_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image_description_logo"
                android:src="@drawable/security" />

            <TextView
                android:id="@+id/control_panel_enable_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/status_control_panel_enabled"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/control_panel_contacts_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_control_panel_contacts"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/control_panel_contact_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/control_panel_contact_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/control_panel_contact_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="#444444" />

            <Button
                android:id="@+id/control_panel_change_password_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="left|center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/button_control_panel_change_password" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#444444" />

            <Button
                android:id="@+id/control_panel_update_emergency_contacts_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="left|center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/button_control_panel_update_emergency_contacts" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#444444" />

            <Button
                android:id="@+id/control_panel_view_instructions_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="left|center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/button_control_panel_view_instructions" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#444444" />

            <Button
                android:id="@+id/control_panel_disable_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="left|center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/button_control_panel_disable" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#444444" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>