<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setup_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/title_setup_password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/setup_password_content_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:id="@+id/setup_password_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.mediatek.ppl.ui.SlidingPanelLayout
                android:id="@+id/setup_password_panels"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:id="@+id/setup_password_upper_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/setup_password_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text="@string/summary_setup_password"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/setup_password_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:text="@string/description_setup_password"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

                <com.mediatek.ppl.ui.PanelLayout
                    android:id="@+id/setup_password_lower_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setup_password_upper_panel"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp" >
                <EditText
                    android:id="@+id/setup_password_edit_password_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/hint_setup_password_input_1"
                    android:inputType="numberPassword"
                    android:maxLength="12"
                    android:nextFocusDown="@+id/setup_password_edit_password_2"
                    android:textAppearance="?android:attr/textAppearanceSmall" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/setup_password_edit_password_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_setup_password_input_2"
                    android:inputType="numberPassword"
                    android:maxLength="12"
                    android:nextFocusDown="@+id/checkbox_show_password"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </EditText>
                </com.mediatek.ppl.ui.PanelLayout>
            </com.mediatek.ppl.ui.SlidingPanelLayout>

            <LinearLayout
                android:id="@+id/setup_password_button_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical" >

            <View
                android:id="@+id/setup_password_separating_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#444444" />

                <Button
                    android:id="@+id/setup_password_next_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/button_next" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>