<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/change_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/title_change_password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/change_password_content_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <RelativeLayout
            android:id="@+id/change_password_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <EditText
                    android:id="@+id/change_password_edit_password_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="@string/hint_setup_password_input_1"
                    android:inputType="numberPassword"
                    android:maxLength="12"
                    android:nextFocusDown="@+id/change_password_edit_password_2"
                    android:textAppearance="?android:attr/textAppearanceSmall" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/change_password_edit_password_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_setup_password_input_2"
                    android:inputType="numberPassword"
                    android:maxLength="12"
                    android:nextFocusDown="@+id/checkbox_show_password"
                    android:textAppearance="?android:attr/textAppearanceSmall" >
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/change_password_confirm_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:text="@string/button_confirm" />

            <View
                android:id="@+id/change_password_separating_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_above="@+id/change_password_confirm_button"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#444444" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>